tools/wiki/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wiki
    spec:
      automountServiceAccountToken: false
      containers:
        - image: wiki-image
          name: wiki
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 700m
              memory: 512Mi
              ephemeral-storage: "2Gi"
            requests:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
      imagePullSecrets:
        - name: minbzk-registry
