tools/wiki/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: wiki
  type: ClusterIP
